--- a/greylady/public/css/styles.css
+++ b/greylady/public/css/styles.css
@@ -11,3 +11,9 @@ nav{
   margin-right: auto;
   text-align: center;
 }
+#content{
+  background-color: rgba(255, 255, 255, 0.4);
+}
+li{
+  list-style: none;
+}
