--- a/greylady/public/views/index.html
+++ b/greylady/public/views/index.html
@@ -14,7 +14,7 @@
     <script src="js/controllers/snippet.js" charset="utf-8"></script>
       <script src="js/app.js" charset="utf-8"></script>
   </head>
-  <body>
+  <body class="container">
     <nav>
       <h2 class="grey-lady">Welcome to the Grey Lady</h2>
     </nav>
