--- a/greylady/public/css/styles.css
+++ b/greylady/public/css/styles.css
@@ -1,8 +1,9 @@
 body{
-  font-family: 'Roboto', Helvetica, sans-serif;
+  font-family: 'Lobster', Helvetica, sans-serif;
   color: #000080;
   background-color: #a5adb0;
   background-image: url('http://www.technocrazed.com/wp-content/uploads/2015/12/New-York-Wallpaper-Background-1.jpg');
+  background-repeat: no-repeat;
   background-size: cover;
 }
 nav{
@@ -14,6 +15,6 @@ nav{
 #content{
   background-color: rgba(255, 255, 255, 0.6);
 }
-li{
+/*li{
   list-style: none;
-}
+}*/
