--- a/EmailApp/app/assets/stylesheets/welcome.scss
+++ b/EmailApp/app/assets/stylesheets/welcome.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .container{
-  font-family: 'Pacifico';
-  background-color: #4fa1c2;
+  font-family: 'Montserrat';
+  background-color: #000000;
   color: black;
 }
 #the-form{
