--- a/EmailApp/app/views/layouts/application.html.erb
+++ b/EmailApp/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html ng-app="EmailApp">
 <head>
   <title>EmailApp</title>
-  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <%= javascript_include_tag 'application'%>
