--- a/greylady/public/views/index.html
+++ b/greylady/public/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.css" charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js" charset="utf-8"></script>
@@ -20,8 +20,8 @@
       <h2 class="grey-lady">Welcome to the Grey Lady</h2>
     </nav>
     <div class="content-contaner" ng-controller="snippetsController">
-      <input ui-date ng-model="dateFrom" type="text" id="date-from">
-      <input ui-date ng-model="dateTo" type="text" id="date-to">
+      <input ui-date ng-model="dateFrom" type="text" placeholder="Start Date" id="date-from">
+      <input ui-date ng-model="dateTo" type="text" placeholder="End Date" id="date-to">
       <input type="button" name="Submit" value="Submit" ng-click="getNews()" class="get-news-button">
       <div id="content">
         <ol>
